# django-api-todo

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
backend/: .coveragerc  .flake8  Dockerfile  django_api-todo_backend.sqlite3  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
backend/accounts/: admin.py  models.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/tests/: test_models.py
backend/api/: serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/docs/: conf.py  index.rst
backend/docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  package_index.html  search.html  searchindex.js
backend/docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  package_index.doctree
backend/docs/_build/_sources/: index.rst.txt
backend/htmlcov/: d_10fae538ba4e8521_admin_py.html  d_10fae538ba4e8521_apps_py.html  d_10fae538ba4e8521_models_py.html  d_10fae538ba4e8521_serializers_py.html  d_10fae538ba4e8521_urls_py.html  d_10fae538ba4e8521_views_py.html  d_1411a550f4db4113_admin_py.html  d_1411a550f4db4113_apps_py.html  d_1411a550f4db4113_models_py.html  d_1ea838694151cac8_urls_py.html  index.html  status.json
backend/templates/admin/: base_site.html
backend/todos/: models.py  serializers.py  tests.py  urls.py  views.py  views.py.dist
backend/todos/migrations/: 0001_initial.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: add-todo.js  login.js  signup.js  todos-list.js
frontend/src/services/: todos.js
