[tool.poetry]
name = "django_api-todo"
version = "0.1.0"
description = "A demo of Django functionality using DRF"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
environs = {extras = ["django"], version = "^9.5.0"}
django-cors-headers = "^3.12.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
