[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
  | migrations
)/
'''

[tool.coverage.paths]
source = ["config", "todos"]

[tool.coverage.run]
branch = true
source = ["config"]
omit = [
    "*/__init__.py",
    "*manage.py",
    "*settings*.py",
    "*urls.py",
    "*admin.py",
    "*migrations/*",
    "*tests/*",
    "*test_*.py",
    "*tests.py",
    "*wsgi.py",
    "*conftest.py",
    "*/extra*",
]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 79

[tool.poetry]
name = "django_api-todo"
version = "0.1.0"
description = "A demo of Django functionality using DRF"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
environs = {extras = ["django"], version = "^9.5.0"}
django-cors-headers = "^3.12.0"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
django-extensions = "^3.2.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
ipython = "^8.5.0"
friendly = "^0.7.10"
colorama = "^0.4.5"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
